# elfragmentador-streamlit

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
