[tool.poetry]
name = "elfragmentador-streamlit"
version = "0.1.0"
description = ""
authors = ["Jspaezp <jspaezp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.12.2"
elfragmentador = "^0.53.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
