[tool.poetry]
name = "elfragmentador-streamlit"
version = "0.2.0"
description = ""
authors = ["Jspaezp <jspaezp@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
streamlit = "^1.12.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
torch = "^1.13.0"
numba = "^0.56.2"
spectrum_utils = ">=0.4.1"
elfragmentador = {extras = ["plotting"], version = "^0.57.0"}
ms2ml = {extras = ["plotting"], version = "^0.0.34"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
